--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,5 +2,6 @@ set -g base-index 1
 set -g mouse on
 set -g set-titles on
 
+set-option -g default-shell /bin/bash
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
