Set tmux history limit

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,3 +5,5 @@ set -g set-titles on
 set-option -g default-shell /bin/bash
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
+
+set -g history-limit 20000
