Fix italic inside tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,6 @@ set -g mouse on
 set -g set-titles on
 
 set-option -g default-shell /bin/bash
-#set -g default-terminal "tmux-256color"
-#set -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "tmux"
 
 set -g history-limit 20000
