--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,3 +6,6 @@ set-option -g default-shell /bin/bash
 set -g default-terminal "tmux"
 
 set -g history-limit 20000
+
+# Make fn-keys work
+setw -g xterm-keys on
