--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,3 +9,8 @@ set -g history-limit 20000
 
 # Make fn-keys work
 setw -g xterm-keys on
+
+# https://unix.stackexchange.com/questions/12032/how-to-create-a-new-window-on-the-current-directory-in-tmux
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
