--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,5 +4,5 @@
 "git.removedSign.hlGroup": "GitGutterDelete",
 "git.topRemovedSign.hlGroup": "GitGutterDelete",
 "git.changeRemovedSign.hlGroup": "GitGutterChangeDelete",
-
+"rust-analyzer.cargoFeatures.loadOutDirsFromCheck": true
 }
