--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,3 +14,5 @@ setw -g xterm-keys on
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+
+bind r respawn-pane -k
