--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,3 +16,7 @@ bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 bind r respawn-pane -k
+
+set-option -g status-interval 5
+set-option -g automatic-rename on
+set-option -g automatic-rename-format '#{b:pane_current_path}(#{b:pane_current_command})'
