Last commit from maser

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,8 +15,16 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# Copy current pane history to a file and open it with vim
+bind P 'capture-pane -S - ; save-buffer /tmp/tmux.history ; delete-buffer ; split vim /tmp/tmux.history'
+
 bind r respawn-pane -k
 
 set-option -g status-interval 5
 set-option -g automatic-rename on
 set-option -g automatic-rename-format '#{b:pane_current_path}(#{b:pane_current_command})'
+
+# Reminder for usefull keys I often forget about:
+# l - switch to latest window, useful to move back and forth
+# break - move this pane to a new window, useful to focus on a small pane
+# z - to zoom this pane
