--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,6 @@ set -g mouse on
 set -g set-titles on
 
 set-option -g default-shell /bin/bash
-set -g default-terminal "tmux"
 
 set -g history-limit 20000
 
@@ -28,3 +27,12 @@ set-option -g automatic-rename-format '#{b:pane_current_path}(#{b:pane_current_c
 # l - switch to latest window, useful to move back and forth
 # break - move this pane to a new window, useful to focus on a small pane
 # z - to zoom this pane
+
+#set -g default-terminal "tmux"
+#set -g default-terminal "tmux-256color"
+#set -as terminal-overrides ",gnome*:Tc"
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+
+# Set vi mode
+setw -g mode-keys vi
