--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,8 @@ set -g set-titles on
 
 set-option -g default-shell /bin/bash
 
-set -g history-limit 20000
+set -g history-limit 100000
+set -g escape-time 10
 
 # Make fn-keys work
 setw -g xterm-keys on
@@ -13,6 +14,7 @@ setw -g xterm-keys on
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
+bind k clear-history
 
 # Copy current pane history to a file and open it with vim
 bind P 'capture-pane -S - ; save-buffer /tmp/tmux.history ; delete-buffer ; split vim /tmp/tmux.history'
@@ -21,7 +23,7 @@ bind r respawn-pane -k
 
 set-option -g status-interval 5
 set-option -g automatic-rename on
-set-option -g automatic-rename-format '#{b:pane_current_path}(#{b:pane_current_command})'
+set-option -g automatic-rename-format '#{b:pane_current_path}'
 
 # Reminder for usefull keys I often forget about:
 # l - switch to latest window, useful to move back and forth
@@ -29,10 +31,11 @@ set-option -g automatic-rename-format '#{b:pane_current_path}(#{b:pane_current_c
 # z - to zoom this pane
 
 #set -g default-terminal "tmux"
-#set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux-256color"
 #set -as terminal-overrides ",gnome*:Tc"
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 # Set vi mode
 setw -g mode-keys vi
+
