new: update neovim settings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind c new-window -c "#{pane_current_path}"
 bind k clear-history
 
 # Copy current pane history to a file and open it with vim
-bind P 'capture-pane -S - ; save-buffer /tmp/tmux.history ; delete-buffer ; split vim /tmp/tmux.history'
+bind P 'capture-pane -S - ; save-buffer /tmp/tmux.history ; delete-buffer ; split ${EDITOR} /tmp/tmux.history'
 
 bind r respawn-pane -k
 
