--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,4 @@
+
 set -g base-index 1
 set -g mouse on
 set -g set-titles on
@@ -20,6 +21,7 @@ bind k clear-history
 bind P 'capture-pane -S - ; save-buffer /tmp/tmux.history ; delete-buffer ; split ${EDITOR} /tmp/tmux.history'
 
 bind r respawn-pane -k
+bind / 'copy-mode; send-keys /'
 
 set-option -g status-interval 5
 set-option -g automatic-rename on
@@ -39,3 +41,10 @@ set -ga terminal-overrides ",*256col*:Tc"
 # Set vi mode
 setw -g mode-keys vi
 
+# https://github.com/tmux-plugins/tpm
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+run '~/.tmux/plugins/tpm/tpm'
